--- a/test_ud.html
+++ b/test_ud.html
@@ -53,7 +53,7 @@
 
     <script>
         const app = Vue.createApp({
-        data() {aaa
+        data() {
             return {
             visible: false
             };
