--- a/play_end.html
+++ b/play_end.html
@@ -21,7 +21,8 @@
                 <!-- <div class="calendar-content"> -->
                     <!-- <p>{{366 - count}}</p> -->
 
-                    <p class="an3-fadedown">お見事</p>
+                    <!-- 上から降りてくるお見事     ↓ 半角スペースの代替文字  -->
+                    <p class="fadedown_omigoto">&nbsp;&nbsp;&thinsp;お見事</p>
 
                 </div>
             </div>
@@ -32,31 +33,63 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js\main.js"></script>
 
 
 
 
     <style>
-        .an3-fadedown {
-            /* background-color:#ff7f50; */
-            font-size: 70px;
-            font-weight: bold;
+
+        /* タイマーストップした後点滅するcss */
+        .timer {
+            animation: flash 1.5s linear infinite;
+            margin: 20px;
+        }
+
+        /* 点滅のアニメーション */
+        @keyframes flash {
+            0%,
+            100% {
+                /* 不透明度 */
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0.3;
+            }
+        }
+        
+
+        /* 上から落ちてくるお見事のcss */
+        .fadedown_omigoto {
+            font-size: 75px;
+            text-align: auto;
+            font-weight: bold;  /* 太字 */
             animation-name: fadedown;
-            animation-duration: 3s;
-            /* animation-iteration-count: infinite; */
-            animation-iteration-count: 1;
+            animation-duration: 2s; /* アニメーションの時間 */
+            animation-iteration-count: 1;  /* アニメーションの回数 */
+            /* animation-iteration-count: infinite; */  /* テスト用無限繰り返し */
         }
+        /* 落ちる動き */
         @keyframes fadedown {
-        from {
-            opacity: 0;
-            transform: translateY(0);
+            /* 初期位置 */
+            0% {
+                opacity: 0; /* 透明度 */
+                transform: translateY(100px); /* y軸の移動 */
+            }
+            /* 透明状態で上へ移動  */
+            50% {
+                opacity: 0;
+                transform: translateY(-400px);
+            }
+            /* 描画されながら降下  */
+            80% {
+                opacity: 1;
+                transform: translateY(40px);
+            }
         }
-        to {
-            opacity: 1;
-            transform: translateY(100px);
-        }
-        }
+        /* 元のやつ↓ */
+
         /* @keyframes fadedown {
         from {
             opacity: 0;
