--- a/play_end.html
+++ b/play_end.html
@@ -22,7 +22,7 @@
                     <!-- <p>{{366 - count}}</p> -->
 
                     <!-- 上から降りてくるお見事     ↓ 半角スペースの代替文字  -->
-                    <p class="fadedown_omigoto">&nbsp;&nbsp;&thinsp;お見事</p>
+                    <p class="fadedown_omigoto">&nbsp;&thinsp;お見事</p>
 
                 </div>
             </div>
@@ -69,6 +69,7 @@
             animation-duration: 2s; /* アニメーションの時間 */
             animation-iteration-count: 1;  /* アニメーションの回数 */
             /* animation-iteration-count: infinite; */  /* テスト用無限繰り返し */
+            font-family:  serif; 
         }
         /* 落ちる動き */
         @keyframes fadedown {
