--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <div id="app" class="app">
-        <h1 class="timer">00:00</h1>
+        <h1 class="timer"id="time">{{time}}</h1>
+        
+
         <input type="range" class="form-range" id="customRange1" value="0" v-model="rotate">
         <div class="main">
             <div class="calendar">
