--- a/test_ud.html
+++ b/test_ud.html
@@ -1,16 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <link rel="stylesheet" href="css/test.css">
-</head>
+<html>
 <body>
-    <div class="container">
-        <div class="page page1">1</div>
-        <div class="page page2">2</div>
+<div id="app">
+    <div id="parent" style="
+    display: flex;
+    height: 100%;
+    width: 100%;
+">
+    <div id="left" style="
+    background-color: blue;
+    width: 100%;
+">左</div>
+    <div id="center" style="
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 70rem;
+    flex-grow: 3;
+"><div>ここにカレンダー<div>
+</div></div></div>
+    <div id="right" style="
+    width: 100%;
+    /* width: 10rem; */
+    /* position: absolute; */
+    /* right: 30px; */
+    background-color: red;
+    flex-grow: 3;
+"><div style="
+    text-align: right;
+    padding: 0 1rem 0 0;
+">右右右右右右右右右右右右</div>
+</div>
     </div>
+  </div>
+​
 </body>
-</html>
+<script>
+document.getElementById("right").addEventListener("mouseover", (event) => {
+ console.log("on right");
+});
+document.getElementById("left").addEventListener("mouseover", (event) => {
+ console.log("on left");
+});
+</script>
+</hmtl>
