--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style2.css">
-    <link rel="stylesheet" href="css/end.css">
     <title>AzureNoob</title>
 </head>
 <body>
@@ -28,6 +27,7 @@
                         <transition-group>
                             <div v-for="i in count" class="calendar-content" v-bind:style="{ zIndex: i }" v-bind:key="i">
                                 <p>{{ 6 - i }}</p>
+                                <p v-bind:class="display_css"  v-bind:data-isodd="display_num%2===0">{{ display_num }}</p>
                             </div>
                         </transition-group>
                     </div>
