--- a/index5.html
+++ b/index5.html
@@ -7,7 +7,7 @@
         <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/style4.css">
     <link rel="stylesheet" href="css/end.css">
     <title>AzureNoob</title>
 </head>
@@ -26,7 +26,7 @@
                         <!-- リスタートボタン -->
                         <button v-if="end" class="end_button" v-on:click="remake_game">もう一度？</button>
                         <transition-group>
-                            <div v-for="i in count" class="calendar-content" v-bind:style="{ zIndex: i }" v-bind:key="i">
+                            <div :data-state="i % 2 === 1 ? 'true' : 'false'" v-for="i in count" class="calendar-content" v-bind:style="{ zIndex: i }" v-bind:key="i">
                                 <p v-bind:class="display_css">{{ display_num }}</p>
                             </div>
                         </transition-group>
@@ -41,6 +41,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/main3.js"></script>
+    <script src="js/main5.js"></script>
 </body>
 </html>
