--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Training calendar | from AzureNoob</title>
+    <title>Training calendar | by AzureNoob</title>
 </head>
 <body>
     <div id="app" class="app">
