--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- ↓自動翻訳させないようにする -->
+    <meta name="google" content="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.jsdelivr.net/npm/vue@2.7.11/dist/vue.js"></script>
         <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
