--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                         <!-- 上から降りてくるお見事                ↓ 半角スペースの代替文字  -->
                         <p v-if="end" class="fadedown_omigoto">お見事</p>
                         <!-- リスタートボタン -->
-                        <button v-if="end" class="end_button" v-on:click="remake_game">もう一度？</button>
+                        <button v-if="end" class="end_button" v-on:click="remakeGame">もう一度？</button>
                         <transition-group>
                             <div :data-state="i % 2 === 1 ? 'true' : 'false'" v-for="i in count" class="calendar-content" v-bind:style="{ zIndex: i }" v-bind:key="i">
-                                <p v-bind:class="display_css">{{ display_num }}</p>
+                                <p v-bind:class="displayCss">{{ displayNum }}</p>
                             </div>
                         </transition-group>
                     </div>
@@ -36,7 +36,7 @@
             </div>
             
             <div class="right" v-on:mouseover="arriveRight">
-                <h1 class="timer" v-bind:class=timer_css>{{time}}</h1>
+                <h1 class="timer" v-bind:class=timerCss>{{time}}</h1>
             </div>
         </div>
     </div>
